--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "framer-motion": "^12.0.0",
     "next": "^15.4.8",
     "next-themes": "^0.4.6",
-    "nextra": "4.3.0-alpha.30",
-    "nextra-theme-docs": "4.3.0-alpha.30",
+    "nextra": "4.3.0",
+    "nextra-theme-docs": "4.3.0",
     "react": "19.1.2",
-    "react-dom": "19.1.0",
+    "react-dom": "19.1.2",
     "source-map-support": "^0.5.21"
   },
   "devDependencies": {
